--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /target/
 /node_modules/
 models/tjake_Llama-3.2-1B-Instruct-JQ4/model.safetensors
+runme.sh
+envelopifydb.mv.db
+envelopifydb.trace.db
+cm.sh
+all_java_files.txt
+models/tjake_Llama-3.2-1B-Instruct-JQ4/
